fix: sidebar width on small screen

--- a/ecommerce-application/src/features/catalog/components/Sidebar/Sidebar.module.scss
+++ b/ecommerce-application/src/features/catalog/components/Sidebar/Sidebar.module.scss
@@ -1,12 +1,6 @@
 @import '/src/App/styles/vars.scss';
 
 .container {
-
-  @media #{$mq-mini} {
-    width: 240px;
-    font-size: 1em;
-  }
-
   @media #{$mq-small} {
     width: 240px;
     font-size: 1em;
@@ -23,7 +17,7 @@
   }
 
   @media #{$mq-xlarge} {
-   width: 300px;
+    width: 300px;
     font-size: 1.2em;
     input[type='checkbox'] {
       width: 20px;
@@ -58,8 +52,19 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 400px;
+  max-width: 130px;
   font-size: 1em;
+  @media #{$mq-small} {
+    max-width: 240px;
+  }
+
+  @media #{$mq-xlarge} {
+    max-width: 300px;
+  }
+
+  @media #{$mq-xxlarge} {
+    max-width: 500px;
+  }
 }
 .menu ul {
   box-sizing: border-box;
@@ -90,14 +95,13 @@
       width: 30px;
       height: 30px;
     }
-   }
+  }
   @media #{$mq-xxlarge} {
     svg {
       width: 50px;
       height: 50px;
     }
-   }
-
+  }
 }
 .sort input {
   font-size: 1em;
